--- a/rwa4_group3/CMakeLists.txt
+++ b/rwa4_group3/CMakeLists.txt
@@ -25,6 +25,7 @@ install(TARGETS
 # Install directories in the correct destination
 install(DIRECTORY
   launch
+  config
   DESTINATION share/${PROJECT_NAME}
 )
 
