--- a/rwa4_group3/package.xml
+++ b/rwa4_group3/package.xml
@@ -13,6 +13,9 @@
   <depend>std_srvs</depend>
   <depend>ariac_msgs</depend>
   <depend>rclcpp</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_kdl</depend>
+  <depend>geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
