Final assignment submission commit

--- a/rwa4_group3/CMakeLists.txt
+++ b/rwa4_group3/CMakeLists.txt
@@ -68,6 +68,7 @@ endif()
 # Create a variable for all dependencies
 set(FRAME_DEMO_INCLUDE_DEPENDS
   ament_cmake
+  ament_cmake_python
   rclcpp
   std_msgs
   std_srvs
