--- a/rwa4_group3/package.xml
+++ b/rwa4_group3/package.xml
@@ -10,12 +10,15 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>std_msgs</depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
   <depend>std_srvs</depend>
   <depend>ariac_msgs</depend>
   <depend>rclcpp</depend>
+  <depend>rclpy</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_kdl</depend>
   <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
