--- a/rwa5_packages/rwa5_group3/package.xml
+++ b/rwa5_packages/rwa5_group3/package.xml
@@ -3,16 +3,19 @@
 <package format="3">
   <name>rwa5_group3</name>
   <version>0.0.0</version>
-  <description>Moveit demo</description>
-  <maintainer email="zeidk@umd.edu">zeid</maintainer>
-  <license>TODO: License declaration</license>
+  <description>rwa5 group3 enpm663</description>
+  <maintainer email="darshit@umd.edu">darshit</maintainer>
+  <maintainer email="ssehgal7@umd.edu">shivam</maintainer>
+  <maintainer email="ppordi@umd.edu">patrik</maintainer>
+  <maintainer email="rohithvs@umd.edu">rohith</maintainer>
+  
+  
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
-  
-  <depend>robot_commander_msgs</depend>
   <depend>rclcpp</depend>
   <depend>rclpy</depend>
   <depend>tf2</depend>
